# ChangeLog for sci-mathematics/gmm
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmm/ChangeLog,v 1.5 2009/07/01 15:05:10 aballier Exp $

  01 Jul 2009; Alexis Ballier <aballier@gentoo.org> gmm-3.0.ebuild:
  keyword ~x86-fbsd

  17 Apr 2009; Jeroen Roovers <jer@gentoo.org> gmm-3.0:
  Marked ~hppa (bug #260777).

  11 Apr 2009; Raúl Porcel <armin76@gentoo.org> gmm-3.0.ebuild:
  Add ~alpha/~ia64 wrt #260777

  02 Nov 2008; Mike Frysinger <vapier@gentoo.org> gmm-3.0.ebuild:
  Add ppc/ppc64 love for KDE 4.

*gmm-3.0 (13 Jan 2008)

  13 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org> +metadata.xml,
  +gmm-3.0.ebuild:
  Initial import to the tree as per bug 205646.

  29 Dec 2007; Ingmar Vanhassel <ingmar.vanhassel@gmail.com> Manifest:
  Manifest, upstream switched the tarball.

  06 Dec 2007; Ingmar Vanhassel <ingmar.vanhassel@gmail.com> gmm-3.0.ebuild:
  Fix HOMEPAGE.

  06 Sep 2007; Emanuele A. Bagnaschi <zephyrus@mirach.it> +metadata.xml,
  +gmm-3.0.ebuild:
  Added gmm-3.0 ebuild. Many thanks to Erlend Davidson and Wojciech Myrda -
  See bug #164560.
