@@ -2,4 +2,14 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>kde</herd>
+<longdescription lang='en'>
+  Gmm++ is a generic C++ template library for sparse, dense and
+  skyline matrices. It is built as a set of generic algorithms (mult,
+  add, copy, sub-matrices, dense and sparse solvers ...) for any
+  interfaced vector type or matrix type. It can be view as a glue
+  library allowing cooperation between several vector and matrix
+  types. However, basic sparse, dense and skyline matrix/vector types
+  are built in Gmm++, hence it can be used as a standalone linear
+  algebra library.
+</longdescription>
 </pkgmetadata>
