@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/gmm
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmm/ChangeLog,v 1.5 2009/07/01 15:05:10 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmm/ChangeLog,v 1.6 2009/08/14 23:41:29 bicatali Exp $
+
+*gmm-3.1 (14 Aug 2009)
+
+  14 Aug 2009; Sébastien Fabbro <bicatali@gentoo.org> +gmm-3.1.ebuild,
+  metadata.xml:
+  Version bump
 
   01 Jul 2009; Alexis Ballier <aballier@gentoo.org> gmm-3.0.ebuild:
   keyword ~x86-fbsd
